force-app/main/default/objects/Industry_Fund__c/Industry_Fund__c.object-meta.xml
<CustomObject>
    <description>The funds for all industries that the org offers. Including products and services offered.</description>
    <label>Industry Fund</label>
    <nameField>
        <label>Industry NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Funds</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>