force-app/main/default/objects/Industry_Fund__c/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <description>The name of the industry that is related to the NAICS code.</description>
    <label>Industry Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>