force-app/main/default/objects/Industry_Fund__c/fields/Remaining_Funds__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Funds__c</fullName>
    <label>Remaining Funds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>