force-app/main/default/objects/Industry_Fund__c/fields/Total_Amount_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Funds__c</fullName>
    <description>The total amount of funds for this specific industry area.</description>
    <label>Total Amount of Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>