force-app/main/default/objects/Industry_Fund__c/validationRules/Check_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Name</fullName>
    <active>true</active>
    <description>Check if the name of the record is 6 numbers not text.</description>
    <errorConditionFormula>NOT(ISNUMBER(Name)) || LEN(Name) &gt; 6</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Error on NAICS Code. Please input valid 6 digit code.</errorMessage>
</ValidationRule>