force-app/main/default/objects/Industry_Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Industry_Name__c</columns>
    <columns>Total_Amount_of_Funds__c</columns>
    <columns>Remaining_Funds__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>